--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <header class="section-header">
         <nav class="nav flex-row">
-            <a href="index" class="logo-link"><img src="assets/images/logo.gif" alt="Carlos Rivera Logo" class="logo" /></a>
+            <a href="#" class="logo-link"><img src="assets/images/logo.gif" alt="Carlos Rivera Logo" class="logo" /></a>
             <div class="nav-menu">
                 <ul class="nav-list">
 
@@ -87,13 +87,13 @@
 
 
                     <li>
-                        <a href="https://www.linkedin.com/in/codelaby" class="social-link" target="_blank" rel="noopener">
+                        <a href="https://www.linkedin.com/in/dev-bi-carlosmariorivera" class="social-link" target="_blank" rel="noopener">
                             <ion-icon class="link social-icon" name="logo-linkedin"></ion-icon>
                         </a>
                     </li>
 
                     <li>
-                        <a href="https://github.com/codelaby" class="social-link" target="_blank" rel="noopener">
+                        <a href="https://github.com/carlosmriveraz" class="social-link" target="_blank" rel="noopener">
                             <ion-icon class="link social-icon" name="logo-github"></ion-icon>
                         </a>
                     </li>
@@ -103,7 +103,7 @@
             <div class="side-social-links--rigth">
                 <ul class="social-links social-links--side" rel="noopener">
                     <li>
-                        <a href="mailto:mycodelaby@gmail.com" class="link social-link">carlosmrz100@hotmail.com</a>
+                        <a href="mailto:carlosmrz100@hotmail.com" class="link social-link">carlosmrz100@hotmail.com</a>
                     </li>
                 </ul>
             </div>
@@ -482,23 +482,16 @@
                     </ul>
                 </div>
                 <p class="copyright">
-                    Designed & Built by Codelaby &copy;
+                    Designed & Built by carlosmrz100@hotmail.com &copy;
                     <span class="year"></span>
                 </p>
                 <p>
                     <ul id="eula-list">
 
-                        <li>
-                            <a href="https://codelaby.github.io/eula.html" target="_blank" rel="noopener">Privacy Policy</a>
-                        </li>
 
-                        <li>
-                            <a href="https://codelaby.github.io/eula.html" target="_blank" rel="noopener">Cookies Policy</a>
-                        </li>
 
-                        <li>
-                            <a href="https://codelaby.github.io/eula.html" target="_blank" rel="noopener">Terms of Use</a>
-                        </li>
+
+
 
                     </ul>
 
