--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <a href="#skills" class="link main-nav-link">herramientas <span>&nbsp;&frasl;&gt;</span></a>
                     </li>
                     <li>
-                        <a href="#works" class="link main-nav-link">Proyectos <span>&nbsp;&frasl;&gt;</span></a>
+                        <a href="#work" class="link main-nav-link">Proyectos <span>&nbsp;&frasl;&gt;</span></a>
                     </li>
                     <li>
 
@@ -269,17 +269,17 @@
                                                 <p>SQL Server</p>
                                             </li>
                                         </ul>
-                                        
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-         
+
         </section>
 
         <!-- Other Skills -->
-        <section class=" other-skills " id=" oskills ">
+        <section class=" other-skills " id="oskills">
             <div class=" container-md ">
                 <p class=" skills-title "><strong>Otras habilidades</strong> (descubre)-.-.
                     ....</p>
@@ -311,9 +311,7 @@
         </section>
 
         <!-- works -->
-        <section class=" section-works " id="works ">
-
-
+        <section class=" section-works " id="work">
             <div class=" container-md ">
                 <div class=" heading-secondary--left ">
                     <h2 class=" heading-secondary ">
@@ -418,7 +416,7 @@
                 <div class=" image-container ">
 
 
-                    <iframe title=" bi " name=" bi frame " src=" html/bi/bi.html " width=" 90% " height=" 800 "
+                    <iframe title="bi" name=" bi frame " src=" html/bi/bi.html " width=" 80% " height=" 700 "
                         rel=" noopener ">
                     </iframe>
                 </div>
