--- a/index.html
+++ b/index.html
@@ -213,13 +213,22 @@
                                         <img src="images/aws/s3.webp" alt="s3" />
                                         <p>S3</p>
                                     </li>
+
+                                    <li class="skills-name">
+                                        <img src="images/aws/quicksight.webp" alt="Quick Sight"></img>
+                                        <p>Quick Sight</p>
+                                    </li>
                                     <li class="skills-name">
                                         <img src="images/aws/rds.webp" alt="RDS"></img>
                                         <p>RDS</p>
                                     </li>
                                     <li class="skills-name">
-                                        <img src="images/aws/QuickSight.webp" alt="Quick Sight"></img>
-                                        <p>Quick Sight</p>
+                                        <img src="images/aws/athena.webp" alt="athena"></img>
+                                        <p>athena</p>
+                                    </li>
+                                    <li class="skills-name">
+                                        <img src="images/aws/glue.webp" alt="glue"></img>
+                                        <p>glue</p>
                                     </li>
                                 </ul>
                             </div>
@@ -327,8 +336,8 @@
                             descritas en la sección de Tecnologías. <br><br>
                             </p>
                             <p>
-                            Tecnologías: 
-                            <br>
+                                Tecnologías:
+                                <br>
                             </p> HTML, CSS, JavaScript
                         </div>
                     </div>
@@ -339,7 +348,7 @@
                             Muestra los precios históricos del dólar y hace una predicción de <strong>
                                 IA</strong> Business Intelligence.<br><br><br><br><br>
                             <strong>Tecnologías:</strong>
-                             Python, SQL,
+                            Python, SQL,
                         </div>
                     </div>
                     <div class=" see-more-btn-box ">
@@ -457,7 +466,7 @@
     <!-- COOKIE CONSENT -->
     <script src=" js/cookie_consent.js "></script>
 
-        <!-- animacion de estrellas -->
+    <!-- animacion de estrellas -->
     <script>
         for (let i = 0; i < 100; i++) {
             const star = document.createElement('div');
